--- a/about-us/index.html
+++ b/about-us/index.html
@@ -277,7 +277,7 @@
                 <h2 class="text-body" data-aos="fade" data-aos-duration="700" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 100px;margin-top: 150px;">System Leads</h2>
                 <section></section>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Sakib Ahmed</h4>
@@ -285,7 +285,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Cecil Kumah</h4>
@@ -293,7 +293,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Nick Poon</h4>
@@ -301,7 +301,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Jillian Busetto</h4>
@@ -309,7 +309,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Jazmyn Beasely</h4>
@@ -317,7 +317,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Fabio Nunez</h4>
@@ -327,7 +327,7 @@
                     </div> 
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Kade Jimenez</h4>
@@ -335,7 +335,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Bernard Liebeskind</h4>
@@ -343,7 +343,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Valentina Gonzalez</h4>
@@ -351,7 +351,7 @@
                             </div>
                         </div>
                     </div> 
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Jacob Shelver</h4>
@@ -359,7 +359,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Tameem Asif</h4>
@@ -367,7 +367,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Maxfield Parson-Scherban</h4>
@@ -377,7 +377,7 @@
                     </div> 
                 </div>
             <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Joe Wild</h4>
@@ -385,7 +385,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Cyril Darku</h4>
@@ -393,7 +393,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Kamil Zajkowski</h4>
@@ -401,7 +401,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Kevin Yu</h4>
@@ -409,7 +409,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Vedika Poddar</h4>
@@ -417,7 +417,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-sm-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Po-Yen Lin</h4>
