--- a/about-us/index.html
+++ b/about-us/index.html
@@ -140,96 +140,10 @@
                 <section></section>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Matthew_Groll.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Matthew Groll</h4>
-                                <p class="card-text">President</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Sanja_Kirova.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Sanja Kirova</h4>
-                                <p class="card-text">Vice President of Technical Operations</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Elaine_Kharbanda.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Elaine Kharbanda</h4>
-                                <p class="card-text">Vice President of Business Affairs</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Kat_OReilly.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Katherine O’Reilly</h4>
-                                <p class="card-text">Chief Mechanical Engineer</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Rano.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Rano Stouraiti</h4>
-                                <p class="card-text">Chief Electrical Engineer</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Jannie_Zhong.jpeg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Jannie Zhong</h4>
-                                <p class="card-text">Vehicle Dynamics Chief</p>
-                            </div>
-                        </div>
-                    </div> 
-                </div>
-                <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Dairon_Est.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Dairon Estevez</h4>
-                                <p class="card-text">Powertrain Chief</p>
-                            </div>
-                        </div>
-                    </div> 
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Alex_Deli_Ivanov.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Alex Deli-Ivanov</h4>
-                                <p class="card-text">Controls Chief</p>
-                            </div>
-                        </div>
-                    </div> 
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Matthew_Modi.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Matthew Modi</h4>
-                                <p class="card-text">High Voltage Chief</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Mert_Saygi.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Mert Saygi</h4>
-                                <p class="card-text">Low Voltage Chief</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Juan_Zuniga.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Juan Zuniga</h4>
-                                <p class="card-text">Frame/Body/Aero Chief</p>
+                                <p class="card-text">President</p>
                             </div>
                         </div>
                     </div>
@@ -237,6 +151,92 @@
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Vedhas_Banaji.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Vedhas Banaji</h4>
+                                <p class="card-text">Vice President of Technical Operations</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Alex_Polzak.jpg">
+                            <div class="card-body info">
+                                <h4 class="card-title">Alex Polzak</h4>
+                                <p class="card-text">Vice President of Business Affairs</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Alex_Deli-Ivanov.jpg">
+                            <div class="card-body info">
+                                <h4 class="card-title">Alex Deli-Ivanov</h4>
+                                <p class="card-text">Chief Mechanical Engineer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Matthew_Modi.jpg">
+                            <div class="card-body info">
+                                <h4 class="card-title">Matthew Modi</h4>
+                                <p class="card-text">Chief Electrical Engineer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
+                            <div class="card-body info">
+                                <h4 class="card-title">Nika Zamyatina</h4>
+                                <p class="card-text">Vehicle Dynamics Chief</p>
+                            </div>
+                        </div>
+                    </div> 
+                </div>
+                <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Fabio_Nunez_Del_Prado.jpg">
+                            <div class="card-body info">
+                                <h4 class="card-title">Fabio Nunez Del Prado</h4>
+                                <p class="card-text">Powertrain Chief</p>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
+                            <div class="card-body info">
+                                <h4 class="card-title">Jazmyn Beasley</h4>
+                                <p class="card-text">Controls Chief</p>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Rosnel_Leyva-Cortes.jpg">
+                            <div class="card-body info">
+                                <h4 class="card-title">Rosnel Leyva-Cortes</h4>
+                                <p class="card-text">High Voltage Chief</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Godwill_Agbehonou.png">
+                            <div class="card-body info">
+                                <h4 class="card-title">Godwill Agbehonou</h4>
+                                <p class="card-text">Low Voltage Chief</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
+                            <div class="card-body info">
+                                <h4 class="card-title">Calvin Moon</h4>
+                                <p class="card-text">Frame/Body/Aero Chief</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Tameem_Asif.jpeg">
+                            <div class="card-body info">
+                                <h4 class="card-title">Tameem Asif</h4>
                                 <p class="card-text">Electrical Engineering Treasurer</p>
                             </div>
                         </div>
@@ -249,7 +249,7 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Nika Zamyatina</h4>
+                                <h4 class="card-title">Karime Mejia</h4>
                                 <p class="card-text">Mechanical Engineering Treasurer</p>
                             </div>
                         </div>
@@ -257,15 +257,15 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Jazmyn Beasley</h4>
+                                <h4 class="card-title">Emily Shang</h4>
                                 <p class="card-text">Secretary</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Kade_Jimenez.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Allyce_Chung.jpg">
                             <div class="card-body info">
-                                <h4 class="card-title">Kade Jimenez</h4>
+                                <h4 class="card-title">Allyce Chung</h4>
                                 <p class="card-text">Social Chair</p>
                             </div>
                         </div>
