Homogenized image size

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -218,7 +218,7 @@
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Godwill_Agbehonou.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Godwill_Agbehonou.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Godwill Agbehonou</h4>
                                 <p class="card-text">Low Voltage Chief</p>
