Updated 2023 car info and some about-us images

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -200,7 +200,7 @@
                         </div>
                     </div> 
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Jaz_Beasley.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Jazmyn Beasley</h4>
                                 <p class="card-text">Controls Chief</p>
@@ -208,7 +208,7 @@
                         </div>
                     </div> 
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Rosnel_Leyva-Cortes.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Rosnel_Leyva-Cortes.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Rosnel Leyva-Cortes</h4>
                                 <p class="card-text">High Voltage Chief</p>
@@ -226,7 +226,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Calvin_Moon.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Calvin Moon</h4>
                                 <p class="card-text">Frame/Body/Aero Chief</p>
@@ -247,7 +247,7 @@
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Karime_Mejia.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Karime Mejia</h4>
                                 <p class="card-text">Mechanical Engineering Treasurer</p>
@@ -255,7 +255,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Emily_Shang.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Emily Shang</h4>
                                 <p class="card-text">Secretary</p>
@@ -274,7 +274,7 @@
                    
                 </div>
     <section></section>
-                <h2 class="text-body" data-aos="fade" data-aos-duration="700" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 100px;margin-top: 150px;">System Leads</h2>
+                <!-- <h2 class="text-body" data-aos="fade" data-aos-duration="700" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 100px;margin-top: 150px;">System Leads</h2>
                 <section></section>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
@@ -425,7 +425,7 @@
                             </div>
                         </div>
                     </div> 
-                </div>
+                </div> -->
             <div class="container">
                 <div data-aos="fade" style="width:100%;"  align="center">
                             <h2 class="text-body" style="color: rgb(36,59,83);padding-top: 30px;margin-bottom: 5%;margin-top: 1%;">Current Member Roster</h2>
