--- a/cars/index.html
+++ b/cars/index.html
@@ -65,7 +65,29 @@
                   </div>
                 </div>
                 <div class="block-content">
-           
+                    <div class="clean-blog-post">
+                        <div class="row">
+                            <div class="col-lg-5"><a href="/cars/2023/"><img class="rounded img-fluid" src="/assets/img/cars/2023/2023_Car.JPG"></a></div>
+                            <div class="col-lg-7">
+                                <div class="col-lg-7">
+                                <h3>2022-2023 EV</h3>
+                                <p>75kW Drivetrain</p>
+                                <p>18" 300V (288V Nominal), 5.4kWh battery pack</p>
+                                <p>Weight: 275 kg </p>
+                                <p>Ride height: 1" </p>
+                                <p>Center of gravity height: 13"</p>
+                                <p>Track width Front/Rear: 48"/46"</p>
+                                <p>4130 Steel Space-Frame Chassis</p>
+                                <p>Carbon Fiber Body Panels</p>
+                                <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = '/cars/2023';"><a class="" href="/cars/2023" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>    
+                <div class="block-heading">
+                    <h2 class="text-dark">Our Past Cars</h2>
+                </div>
+                <div class="block-content">
                     <div class="clean-blog-post">
                         <div class="row">
                             <div class="col-lg-5"><a href="/cars/2020-EV/"><img class="rounded img-fluid" src="/assets/img/cars/ev-1.jpg"></a></div>
@@ -88,11 +110,6 @@
                             </div>
                         </div>
                     </div>
-                </div>    
-                <div class="block-heading">
-                    <h2 class="text-dark">Our Past Cars</h2>
-                </div>
-                <div class="block-content">
                     <div class="clean-blog-post">
                         <div class="row">
                             <div class="col-lg-5"><a href="/cars/2020-EV/"><img class="rounded img-fluid" src="/assets/img/cars/fullassembly1.JPG"></a></div>
@@ -102,7 +119,7 @@
                                 <p>75kW Drivetrain</p>
                                 <p>18" 300V, 5.4kWh battery pack</p>
                                 <p>Weight: 465 lbs </p>
-                                <p>Ride height: 1" p>
+                                <p>Ride height: 1" </p>
                                 <p>Center of gravity height: 13"</p>
                                 <p>Track width Front/Rear: 48"/46"</p>
                                 <p>4130 steel space-frame chassis</p>
