--- a/cars/index.html
+++ b/cars/index.html
@@ -67,7 +67,7 @@
                 <div class="block-content">
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><a href="/cars/2023/"><img class="rounded img-fluid" src="/assets/img/cars/2023/2023_Car.JPG"></a></div>
+                            <div class="col-lg-5"><a href="/cars/2023/"><img class="rounded img-fluid" src="/assets/img/cars/2023/2023-Car.jpg"></a></div>
                             <div class="col-lg-7">
                                 <div class="col-lg-7">
                                 <h3>2022-2023 EV</h3>
