fixed images maybe??

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -274,7 +274,7 @@
                    
                 </div>
     <section></section>
-                <!-- <h2 class="text-body" data-aos="fade" data-aos-duration="700" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 100px;margin-top: 150px;">System Leads</h2>
+                <h2 class="text-body" data-aos="fade" data-aos-duration="700" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 100px;margin-top: 150px;">System Leads</h2>
                 <section></section>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
@@ -425,7 +425,7 @@
                             </div>
                         </div>
                     </div> 
-                </div> -->
+                </div>
             <div class="container">
                 <div data-aos="fade" style="width:100%;"  align="center">
                             <h2 class="text-body" style="color: rgb(36,59,83);padding-top: 30px;margin-bottom: 5%;margin-top: 1%;">Current Member Roster</h2>
@@ -440,7 +440,7 @@
                 <div data-aos="fade">
                    <div style="vertical-align:middle"> 
                     <h2 class="text-body" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 5%;margin-top: 1%;">Site Credits</h2>
-                    <p>Site contributors are Lalitha Madduri, Danielle Cai, Ivan Barrel, Chen Chen, Anthony Ozerov, and Tong Zhou. Special thanks to Lalitha for creating the foundation for the site.</p>
+                    <p>Site contributors are Lalitha Madduri, Danielle Cai, Ivan Barrel, Chen Chen, Anthony Ozerov, Tong Zhou, Sanja Kirova, and Vedhas Banaji. Special thanks to Lalitha for creating the foundation for the site.</p>
                 </div>
               </div>
             </div>
