still trying to fix images

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -263,7 +263,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/headshots/Allyce_Chung.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Allyce.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Allyce Chung</h4>
                                 <p class="card-text">Social Chair</p>
@@ -274,7 +274,7 @@
                    
                 </div>
     <section></section>
-                <h2 class="text-body" data-aos="fade" data-aos-duration="700" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 100px;margin-top: 150px;">System Leads</h2>
+                <!-- <h2 class="text-body" data-aos="fade" data-aos-duration="700" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 100px;margin-top: 150px;">System Leads</h2>
                 <section></section>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
@@ -425,7 +425,7 @@
                             </div>
                         </div>
                     </div> 
-                </div>
+                </div> -->
             <div class="container">
                 <div data-aos="fade" style="width:100%;"  align="center">
                             <h2 class="text-body" style="color: rgb(36,59,83);padding-top: 30px;margin-bottom: 5%;margin-top: 1%;">Current Member Roster</h2>
