--- a/cars/index.html
+++ b/cars/index.html
@@ -67,7 +67,7 @@
                 <div class="block-content">
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><a href="/cars/2023/"><img class="rounded img-fluid" src="/assets/img/cars/2023TeamPhoto1.jpg"></a></div>
+                            <div class="col-lg-5"><a href="/cars/2023/"><img class="rounded img-fluid" src="/assets/img/cars/2023TeamPhoto1.JPG"></a></div>
                             <div class="col-lg-7">
                                 <div class="col-lg-7">
                                 <h3>2022-2023 EV</h3>
@@ -75,8 +75,9 @@
                                 <p>18" 300V (288V Nominal), 5.4kWh battery pack</p>
                                 <p>Weight: 275 kg </p>
                                 <p>Ride height: 1" </p>
-                                <p>Center of gravity height: 13"</p>
-                                <p>Track width Front/Rear: 48"/46"</p>
+                                <p>Center of gravity height: 9.81"</p>
+                                <p>Track width Front/Rear: 1191/1152.5mm</p>
+                                <p>Wheelbase: 1530mm</p>
                                 <p>4130 Steel Space-Frame Chassis</p>
                                 <p>Carbon Fiber Body Panels</p>
                                 <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = '/cars/2023';"><a class="" href="/cars/2023" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>
