--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ t<!DOCTYPE html>
             <div class="container">
                 <div class="row align-items-center" data-aos="fade" data-aos-duration="1200" data-aos-delay="200">
                     
-                    <div class="col-lg-5"><img class="rounded img-fluid" src="assets/img/cars/2023TeamPhoto1.jpg" style="margin-left: 5%; width: 85%;"></div>
+                    <div class="col-lg-5"><img class="rounded img-fluid" src="assets/img/cars/2023TeamPhoto1.JPG" style="margin-left: 5%; width: 85%;"></div>
                     <div class="col-md-6">
                         <br>
                         <br>
