--- a/cars/index.html
+++ b/cars/index.html
@@ -94,7 +94,7 @@
                             <div class="col-lg-5"><a href="/cars/2020-EV/"><img class="rounded img-fluid" src="/assets/img/cars/ev-1.jpg"></a></div>
                             <div class="col-lg-7">
                                 <h3>2020-2021 EV</h3>
-                                <p>Columbia University Formula Racing is re-designing our electric vehicle this year. After preparing our EV last year and realizing some design challenges, we decided to make big changes to the chassis, accumulator, and more. We look forward to competing in the EV competition at FSAE North this summer of 2021.</p>
+                                <p>Columbia University Formula Racing re-designed our electric vehicle this year. After preparing our EV last year and realizing some design challenges, we decided to make big changes to the chassis, accumulator, and more.</p>
                               <!--<button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = '/cars/2020-EV';"><a class="" href="/cars/2020-EV" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>-->
                                 <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = 'https://www.youtube.com/watch?v=XiHrH-6qzKg';"><a class="" href="https://www.youtube.com/watch?v=XiHrH-6qzKg" style="color: rgba(0,0,0,1);opacity: 1;">Accumulator Design Review</a></button>
                             </div>
@@ -105,7 +105,7 @@
                             <div class="col-lg-5"><a href="/cars/2020-IC"><img class="rounded img-fluid" src="/assets/img/cars/Trackrender.JPG"></a></div>
                             <div class="col-lg-7">
                                 <h3>2020-2021 IC</h3>
-                                <p>In addition to our electric vehicle, Columbia University Formula Racing is continuing its legacy of racing IC cars! After over a semester of hard work last year that was unfortunately interrupted, our team is preparing and testing our car to compete in FSAE Michigan. Ware excited for another fun and educational year of building race cars!</p>
+                                <p>In addition to our electric vehicle, Columbia University Formula Racing decided to continue its legacy of racing IC cars. After over a semester of hard work in 2020 that was unfortunately interrupted, our team prepared and tested our car to compete in FSAE Michigan.</p>
                                 <!--<button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = '/cars/2020-IC';"><a class="" href="/cars/2020-IC" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>-->
                                 
                             </div>
