Added description to 2023 car

--- a/cars/index.html
+++ b/cars/index.html
@@ -71,6 +71,7 @@
                             <div class="col-lg-7">
                                 <div class="col-lg-7">
                                 <h3>2022-2023 EV</h3>
+                                <p>In 2023, CUFR competed in our first FSAE June EV competition. We passed all technical inspections and competed in 3/4 dynamic events. While we scored in the middle of the pack, we intend to learn from our mistakes and come back next year stronger than ever!</p>
                                 <p>75kW Drivetrain</p>
                                 <p>18" 300V (288V Nominal), 5.4kWh battery pack</p>
                                 <p>Weight: 275 kg </p>
