Updated cars page

--- a/cars/index.html
+++ b/cars/index.html
@@ -45,8 +45,8 @@
          <section class="clean-block clean-blog-list dark">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-dark">Current Cars</h2>
-                    <p>Each year, we dedicate ourselves to push the limits of performance and build the next generation of racecars. Explore our vehicles below.<br></p>
+                    <h2 class="text-dark">Current Car</h2>
+                    <p>Each year, we dedicate ourselves to push the limits of performance and build the next generation of racecars. Explore the vehicle we have most recently completed below.<br></p>
                 </div>
                 <div class="container" style="padding-bottom:100px;" align="center">
                   <div class="dropdown">
@@ -86,8 +86,11 @@
                         </div>
                     </div>
                 </div>    
+            </div>
+            <div class="container">
                 <div class="block-heading">
                     <h2 class="text-dark">Our Past Cars</h2>
+                    <p>Explore the vehicles we have built in the past below.<br></p>
                 </div>
                 <div class="block-content">
                     <div class="clean-blog-post">
