Updated calvin's photo

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -226,7 +226,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Calvin_Moon.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Calvin_Moon.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Calvin Moon</h4>
                                 <p class="card-text">Frame/Body/Aero Chief</p>
