--- a/join/index.html
+++ b/join/index.html
@@ -46,14 +46,14 @@
         <section class="clean-block clean-form dark" style="margin-top: -82px;">
             <div class="container">
                 <div class="block-heading" style="margin-top: -43px;"><img data-aos="fade" data-aos-duration="850" src="/assets/img/61072811_10158062997343561_7260407403730960384_o.jpeg" style="width: 100%;padding-bottom: 50px;">
-                    <p style="font-size: 16.5px;margin-bottom: 2%;">We are always looking for new members and sponsors! If you are interested in learning more about us or supporting our team, contact us via social media or email fsae@columbia.edu!</p>
+                    <p style="font-size: 16.5px;margin-bottom: 2%;">We are always looking for new members and sponsors! If you are interested in supporting our team, contact us via social media or email fsae@columbia.edu! If you want to join the team, click the button below and subscribe to our mailing list at the bottom of this page!</p>
+                    <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://cufr.atlassian.net/wiki/spaces/CW/pages/7045300/New+Members';"><a class="" href="https://cufr.atlassian.net/wiki/spaces/CW/pages/7045300/New+Members" style="color: rgba(0,0,0,1);opacity: 1;">New Member Instructions</a></button>
                     <p style="font-size: 16.5px;">Visit us:&nbsp;</p>
 		    <p>- We are located in the basement of Mudd at 500 W 120th St, New York, NY 10027</p>
                     <p>- Go to Mudd, take the stairs to the basement</p>
                     <p>- Take the hallway to the right</p>
                     <p>- Turn right, away from the elevator</p>
                     <p style="padding-bottom: 26px;">- Pass through the first set of double doors and turn right again; head to the end of the hallway</p>
-		    <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://cufr.atlassian.net/wiki/spaces/CW/pages/7045300/New+Members';"><a class="" href="https://cufr.atlassian.net/wiki/spaces/CW/pages/7045300/New+Members" style="color: rgba(0,0,0,1);opacity: 1;">New Member instructions</a></button>
                     <br><br><iframe src="https://calendar.google.com/calendar/embed?src=columbiafsae%40gmail.com&ctz=America%2FNew_York" style="border: 0" width="600" height="600" frameborder="0" scrolling="no"></iframe>       
 		
                 </div>
@@ -96,8 +96,8 @@
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8f5b16d3f1298f4c5e2ab5005_7298b99356" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
-</form>
-</div>	
+    </form>
+    </div>	
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
 	    </section>
